--- a/gameshowc.html
+++ b/gameshowc.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/noidung.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossOrigin="anonymous" />
 </head>
-<audio id="emthich" src="mp3/gainhat.mp3"></audio>
+<audio id="emthich" src="mp3/xoso.mp3"></audio>
 <audio id='bommp3'>
     <source src="mp3/bommp3.mp3">
 </audio>
@@ -32,10 +32,10 @@
         <div class="link">
             <ol>
                 <ul>
-                    <li><a href="index.html">Trang Chủ</a></li>
-                    <li><a href="gioithieu.html">Giới Thiệu</a></li>
-                    <li><a href="noidung.html">Nội Dung</a></li>
-                    <li><a href="gameshowc.html" style="color:#88fdab;">Game</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="gioithieu.html">MEMBER</a></li>
+                    <li><a href="noidung.html">CONTENT</a></li>
+                    <li><a href="gameshowc.html" style="color:#88fdab;">GAME</a></li>
                 </ul>
             </ol>
         </div>
