--- a/gioithieu.html
+++ b/gioithieu.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="" href="css/xoay.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossOrigin="anonymous" />
 </head>
-<audio id="emthich" src="mp3/gainhat.mp3"></audio>
+<audio id="emthich" src="mp3/tayduky.mp3"></audio>
 <audio id='bommp3'>
     <source src="mp3/bommp3.mp3">
 </audio>
@@ -27,16 +27,16 @@
         <div class="link">
             <ol>
                 <ul>
-                    <li><a href="index.html">Trang Chủ</a></li>
-                    <li><a href="gioithieu.html" style="color:#88fdab;">Giới Thiệu</a></li>
-                    <li><a href="noidung.html">Nội Dung</a></li>
-                    <li><a href="gameshow.html">Game</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="gioithieu.html" style="color:#88fdab;">MEMBER</a></li>
+                    <li><a href="noidung.html">CONTENT</a></li>
+                    <li><a href="gameshow.html">GAME</a></li>
                 </ul>
             </ol>
         </div>
     </div>
     <div id="center" class="center">
-        <marquee scrollamount="20"><i><img id='binhleft' width="100" src="images/matbinh.png" alt="">NGUYỄN GIA BÌNH - YÊU TẤT CẢ CÁC CHỊ NGÔN NGỮ ANH (NHỎ HƠN BA)...<img id="binhright" width="100" src="images/matbinh2.png" alt=""></i></marquee>
+        <marquee scrollamount="20"><i><img id='binhleft' width="150" src="images/matky2.png" alt="">NGUYỄN ĐỨC KỲ - YÊU TẤT CẢ CÁC CHỊ KẾ TOÁN K12 (NHỎ HƠN BA)...<img id="binhright" width="150" src="images/matky.png" alt=""></i></marquee>
         <div id="content" class="content">
             <div id="bg" class="anh"></div>
         </div>
@@ -97,11 +97,11 @@
     <!-- <script src="js/nonstop.js"></script> -->
     <script>
         function showmess() {
-            alert("ANH BÌNH YÊU TẤT CẢ CÁC CHỊ NGÔN NGỮ ANH ❤");
+            alert("ANH KỲ YÊU TẤT CẢ CÁC CHỊ K12 ❤");
         }
 
         function gotofb() {
-            window.location.href = 'https://facebook.com/100029031824085';
+            window.location.href = 'https://www.facebook.com/profile.php?id=100094505001476';
         }
     </script>
 </body>
