--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="" href="css/xoay.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossOrigin="anonymous" />
 </head>
-<audio id="nhacnen" src="mp3/quocca.mp3"></audio>
+<audio id="nhacnen" src="mp3/nhucobac.mp3"></audio>
 <audio id='bommp3'>
     <source src="mp3/bommp3.mp3">
 </audio>
@@ -30,16 +30,16 @@
         <div class="link">
             <ol>
                 <ul>
-                    <li><a href="index.html" style="color:#88fdab;">Trang Chủ</a></li>
-                    <li><a href="gioithieu.html">Giới Thiệu</a></li>
-                    <li><a href="noidung.html">Nội Dung</a></li>
-                    <li><a href="gameshow.html">Game</a></li>
+                    <li><a href="index.html" style="color:#88fdab;">HOME</a></li>
+                    <li><a href="gioithieu.html">MEMBER</a></li>
+                    <li><a href="noidung.html">CONTENT</a></li>
+                    <li><a href="gameshow.html">GAME</a></li>
                 </ul>
             </ol>
         </div>
     </div>
     <div id="center" class="center">
-        <marquee scrollamount="20"><i>08D-CNTT1 TOP 1 THẾ GIỚI, XIN CHÀO CÁC BẠN!!!</i></marquee>
+        <marquee scrollamount="20"><i>10D-CNTT1 TOP 1 PHO LO TI LÔ, XIN CHÀO TẤT CẢ MỌI NGƯỜI !!!</i></marquee>
         <div id="content" class="content">
             <div id="container">
                 <div id="stage">
@@ -64,10 +64,10 @@
                 <img id="set2" src="images/tiaset.png" alt="">
             </div>
             <div id="nuoc" class="nuoc">
-                <img id="tq" src="images/kethu/tq.png" alt="">
-                <img id="nhat" src="images/kethu/nhat.png" alt="">
-                <img id="phap" src="images/kethu/phap.png" alt="">
-                <img id="my" src="images/kethu/my.png" alt="">
+                <img id="tq" src="images/kethu/co1.png" alt="">
+                <img id="nhat" src="images/kethu/co2.png" alt="">
+                <img id="phap" src="images/kethu/co4.png" alt="">
+                <img id="my" src="images/kethu/co3.png" alt="">
             </div>
         </div>
         <div class="text1">
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="hoasen">
-            <img src="images/hoasen.png" alt="">
+            <img src="images/langoc.png" alt="">
         </div>
     </div>
     <script src="js/bommouse.js"></script>
@@ -123,11 +123,11 @@
     <script src="js/phaohoa.js"></script>
     <script>
         function showmess() {
-            alert("ANH BÌNH YÊU TẤT CẢ CÁC CHỊ NGÔN NGỮ ANH ❤");
+            alert("ANH KỲ YÊU TẤT CẢ CÁC CHỊ K12 ❤");
         }
 
         function gotofb() {
-            window.location.href = 'https://facebook.com/100029031824085';
+            window.location.href = 'https://www.facebook.com/profile.php?id=100094505001476';
         }
     </script>
 </body>
