--- a/noidung.html
+++ b/noidung.html
@@ -26,10 +26,10 @@
         <div class="link">
             <ol>
                 <ul>
-                    <li><a href="index.html">Trang Chủ</a></li>
-                    <li><a href="gioithieu.html">Giới Thiệu</a></li>
-                    <li><a href="noidung.html" style="color:#88fdab;">Nội Dung</a></li>
-                    <li><a href="gameshow.html">Game</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="gioithieu.html">MEMBER</a></li>
+                    <li><a href="noidung.html" style="color:#88fdab;">CONTENT</a></li>
+                    <li><a href="gameshow.html">GAME</a></li>
                 </ul>
             </ol>
         </div>
