--- a/gameshowb.html
+++ b/gameshowb.html
@@ -32,10 +32,10 @@
         <div class="link">
             <ol>
                 <ul>
-                    <li><a href="index.html">Trang Chủ</a></li>
-                    <li><a href="gioithieu.html">Giới Thiệu</a></li>
-                    <li><a href="noidung.html">Nội Dung</a></li>
-                    <li><a href="gameshowb.html" style="color:#88fdab;">Game</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="gioithieu.html">MEMBER</a></li>
+                    <li><a href="noidung.html">CONTENT</a></li>
+                    <li><a href="gameshowc.html" style="color:#88fdab;">GAME</a></li>
                 </ul>
             </ol>
         </div>
