--- a/noidung2b.html
+++ b/noidung2b.html
@@ -25,12 +25,10 @@
         </div>
         <div class="link">
             <ol>
-                <ul>
-                    <li><a href="index.html">Trang Chủ</a></li>
-                    <li><a href="gioithieu.html">Giới Thiệu</a></li>
-                    <li><a href="noidung.html" style="color:#88fdab;">Nội Dung</a></li>
-                    <li><a href="gameshowb.html">Game</a></li>
-                </ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="gioithieu.html">MEMBER</a></li>
+                <li><a href="noidung.html" style="color:#88fdab;">CONTENT</a></li>
+                <li><a href="gameshow.html">GAME</a></li>
             </ol>
         </div>
     </div>
